tests/functional/data/transpiler/common/errors/barrier/has_invalid_barrier_type.err
has_invalid_barrier_type.cpp:7:13: error: [@barrier] has an invalid barrier type: hello
    7 |             @barrier("hello");
      |             ^
